--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<head lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Landing Page</title>
+    <title>Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
